--- a/index.html
+++ b/index.html
@@ -2,60 +2,93 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Desmanche de Veículo - Enviar para Discord</title>
+  <title>Registro de Desmanche - Los Malditos</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap');
+
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f2f5;
+      font-family: 'Orbitron', sans-serif;
+      background-color: #1c1c1c;
+      color: #e0e0e0;
       padding: 40px;
     }
+
     .container {
-      background: #fff;
+      background: #2b2b2b;
       padding: 30px;
       border-radius: 15px;
       max-width: 500px;
       margin: auto;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
       text-align: center;
+      border: 2px solid #444;
     }
+
+    h2 {
+      font-family: 'Anton', sans-serif;
+      color: #f1f1f1;
+      margin-bottom: 20px;
+      font-size: 24px;
+    }
+
     .paste-box {
-      border: 2px dashed #ccc;
+      border: 2px dashed #777;
       padding: 30px;
       border-radius: 10px;
       margin-bottom: 20px;
-      background: #fafafa;
-      color: #777;
+      background: #1a1a1a;
+      color: #999;
       cursor: pointer;
+      transition: all 0.3s ease;
     }
+
+    .paste-box:hover {
+      background-color: #292929;
+    }
+
     input[type="text"], input[type="file"] {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin-bottom: 15px;
       border-radius: 8px;
-      border: 1px solid #ccc;
+      border: 1px solid #555;
+      background: #111;
+      color: #e0e0e0;
       font-size: 14px;
     }
+
     button {
-      padding: 10px 20px;
-      background: #5865F2;
+      padding: 12px 25px;
+      background: #8a1f1f;
       color: white;
       border: none;
       border-radius: 8px;
+      font-weight: bold;
       cursor: pointer;
+      font-size: 14px;
+      letter-spacing: 1px;
+      transition: background 0.3s ease;
     }
+
     button:hover {
-      background: #4752c4;
+      background: #a82626;
+    }
+
+    #status {
+      margin-top: 15px;
+      font-size: 14px;
+      color: #cfcfcf;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>📋 Registro de Desmanche</h2>
+    <h2>💀 LOS MALDITOS - Registro de Desmanche</h2>
 
     <input type="text" id="quemDesmanchou" placeholder="Quem desmanchou?" required>
     <input type="text" id="qualVeiculo" placeholder="Qual veículo?" required>
 
-    <div class="paste-box" id="pasteBox">Clique aqui e cole a print (Ctrl+V)</div>
+    <div class="paste-box" id="pasteBox">📸 Clique aqui e cole a print (Ctrl+V)</div>
     <input type="file" id="fileInput" accept="image/*">
     
     <button onclick="uploadToDiscord()">Enviar imagem</button>
@@ -64,7 +97,7 @@
 
   <script>
     let imageFile = null;
-    const webhookURL ='https://discord.com/api/webhooks/1400936108434391132/moZC9CNnNzNQlRfK9pjq8iIIucC7q3f-B0u4-VU40Z6GsW1F90PnYskV6BSvu-rDv03D'; // 🛠 Substitua pelo seu webhook
+    const webhookURL ='https://discord.com/api/webhooks/1400936108434391132/moZC9CNnNzNQlRfK9pjq8iIIucC7q3f-B0u4-VU40Z6GsW1F90PnYskV6BSvu-rDv03D'; // Substitua pelo seu
 
     const pasteBox = document.getElementById('pasteBox');
     const fileInput = document.getElementById('fileInput');
@@ -117,7 +150,7 @@
 
         if (response.ok) {
           status.textContent = "✅ Enviado com sucesso para o Discord!";
-          pasteBox.textContent = "Cole uma nova imagem com Ctrl+V";
+          pasteBox.textContent = "📸 Cole uma nova imagem com Ctrl+V";
           imageFile = null;
           fileInput.value = "";
           document.getElementById('quemDesmanchou').value = "";
