--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
   </style>
 </head>
 <body>
+ 
+  <a href="registro2.html">
+  <button style="margin-top: 20px;">➡️ Ir para Segunda Página</button>
+</a>
+  
   <div class="container">
     <h2>💀 LOS MALDITOS - Registro de Desmanche</h2>
 
