--- a/index.html
+++ b/index.html
@@ -10,15 +10,57 @@
       font-family: 'Orbitron', sans-serif;
       background-color: #1c1c1c;
       color: #e0e0e0;
-      padding: 40px;
+      padding: 0;
+      margin: 0;
     }
 
+    /* Sidebar */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 220px;
+      height: 100%;
+      background-color: #2b2b2b;
+      border-right: 2px solid #444;
+      padding: 30px 20px;
+      box-sizing: border-box;
+    }
+
+    .sidebar h3 {
+      font-family: 'Anton', sans-serif;
+      font-size: 18px;
+      color: #f1f1f1;
+      margin-bottom: 20px;
+    }
+
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .sidebar li {
+      margin-bottom: 15px;
+    }
+
+    .sidebar a {
+      color: #ccc;
+      text-decoration: none;
+      font-size: 14px;
+      transition: color 0.3s ease;
+    }
+
+    .sidebar a:hover {
+      color: #fff;
+    }
+
+    /* Conteúdo principal */
     .container {
       background: #2b2b2b;
       padding: 30px;
       border-radius: 15px;
       max-width: 500px;
-      margin: auto;
+      margin: 40px auto 40px 260px; /* margem para não cobrir a sidebar */
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
       text-align: center;
       border: 2px solid #444;
@@ -82,11 +124,17 @@
   </style>
 </head>
 <body>
- 
-  <a href="registro2.html">
-  <button style="margin-top: 20px;">➡️ Ir para Segunda Página</button>
-</a>
-  
+
+  <!-- Sidebar com links -->
+  <div class="sidebar">
+    <h3>📁 Navegação</h3>
+    <ul>
+      <li><a href="index.html">🔧 Registro de Desmanche</a></li>
+      <li><a href="registro2.html">📄 Segunda Página</a></li>
+    </ul>
+  </div>
+
+  <!-- Conteúdo principal -->
   <div class="container">
     <h2>💀 LOS MALDITOS - Registro de Desmanche</h2>
 
@@ -94,7 +142,7 @@
     <input type="text" id="qualVeiculo" placeholder="Qual veículo?" required>
 
     <div class="paste-box" id="pasteBox">📸 Clique aqui e cole a print (Ctrl+V)</div>
-    
+
     <button onclick="uploadToDiscord()">Enviar imagem</button>
     <p id="status"></p>
   </div>
