--- a/registro2.html
+++ b/registro2.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Segundo Registro - Los Malditos</title>
+  <title>Segunda Página - Los Malditos</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap');
 
@@ -10,15 +10,57 @@
       font-family: 'Orbitron', sans-serif;
       background-color: #1c1c1c;
       color: #e0e0e0;
-      padding: 40px;
+      padding: 0;
+      margin: 0;
     }
 
+    /* Sidebar */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 220px;
+      height: 100%;
+      background-color: #2b2b2b;
+      border-right: 2px solid #444;
+      padding: 30px 20px;
+      box-sizing: border-box;
+    }
+
+    .sidebar h3 {
+      font-family: 'Anton', sans-serif;
+      font-size: 18px;
+      color: #f1f1f1;
+      margin-bottom: 20px;
+    }
+
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .sidebar li {
+      margin-bottom: 15px;
+    }
+
+    .sidebar a {
+      color: #ccc;
+      text-decoration: none;
+      font-size: 14px;
+      transition: color 0.3s ease;
+    }
+
+    .sidebar a:hover {
+      color: #fff;
+    }
+
+    /* Conteúdo principal */
     .container {
       background: #2b2b2b;
       padding: 30px;
       border-radius: 15px;
       max-width: 500px;
-      margin: auto;
+      margin: 40px auto 40px 260px; /* margem para a sidebar */
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
       text-align: center;
       border: 2px solid #444;
@@ -32,12 +74,12 @@
     }
 
     p {
-      margin-bottom: 20px;
       color: #ccc;
       font-size: 15px;
+      margin-bottom: 30px;
     }
 
-    a button {
+    button {
       padding: 12px 25px;
       background: #8a1f1f;
       color: white;
@@ -50,19 +92,29 @@
       transition: background 0.3s ease;
     }
 
-    a button:hover {
+    button:hover {
       background: #a82626;
     }
   </style>
 </head>
 <body>
+
+  <!-- Sidebar com links -->
+  <div class="sidebar">
+    <h3>📁 Navegação</h3>
+    <ul>
+      <li><a href="index.html">🔧 Registro de Desmanche</a></li>
+      <li><a href="registro2.html">📄 Segunda Página</a></li>
+    </ul>
+  </div>
+
+  <!-- Conteúdo principal -->
   <div class="container">
     <h2>📄 Segunda Página - Registro Alternativo</h2>
-    <p>Você está na segunda página! Aqui você pode colocar outro tipo de formulário ou informação.</p>
+    <p>Você pode usar esta página para outros tipos de registros, como vendas, compras, apreensões, etc.</p>
 
-    <a href="index.html">
-      <button>⬅️ Voltar para Página Principal</button>
-    </a>
+    <button onclick="window.location.href='index.html'">⬅️ Voltar para Página Principal</button>
   </div>
+
 </body>
 </html>
