--- a/registro2.html
+++ b/registro2.html
@@ -2,177 +2,223 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Oculto Produtos - Los Malditos</title>
-  <link rel="stylesheet" href="./Oculto Produtos_files/style.css">
+  <title>Los Malditos - Controle de Produtos</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap');
-
     body {
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Arial', sans-serif;
       background-color: #1c1c1c;
-      color: #e0e0e0;
-      padding: 0;
-      margin: 0;
-    }
-
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 220px;
-      height: 100%;
-      background-color: #2b2b2b;
-      border-right: 2px solid #444;
-      padding: 30px 20px;
-      box-sizing: border-box;
-    }
-
-    .sidebar h3 {
-      font-family: 'Anton', sans-serif;
-      font-size: 18px;
-      color: #f1f1f1;
-      margin-bottom: 20px;
-    }
-
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .sidebar li {
-      margin-bottom: 15px;
-    }
-
-    .sidebar a {
-      color: #ccc;
-      text-decoration: none;
-      font-size: 14px;
-      transition: color 0.3s ease;
-    }
-
-    .sidebar a:hover {
-      color: #fff;
-    }
-
-    header {
-      margin-left: 240px;
+      color: #eaeaea;
       padding: 20px;
     }
-
-    .tabela-container {
-      margin: 20px 40px 40px 260px;
-      background: #2b2b2b;
-      border-radius: 15px;
-      padding: 20px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-      border: 2px solid #444;
-    }
-
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 10px;
+      margin-top: 20px;
     }
-
     th, td {
-      padding: 8px 12px;
-      border: 1px solid #555;
-      text-align: center;
-    }
-
-    th {
-      background-color: #3a3a3a;
-    }
-
-    input[type="number"] {
-      width: 60px;
-      padding: 5px;
-      border-radius: 5px;
-      border: none;
-    }
-
-    .dados-retorno {
-      margin-left: 260px;
-      margin-right: 40px;
-      background: #2b2b2b;
-      border-radius: 15px;
-      padding: 20px;
-      border: 2px solid #444;
-    }
-
-    select {
       padding: 8px;
-      font-size: 14px;
-      margin-bottom: 15px;
-    }
-
-    .dados-body h3 {
-      font-family: 'Anton', sans-serif;
-      margin-bottom: 10px;
-    }
-
-    footer {
+      border: 1px solid #444;
       text-align: center;
-      margin-left: 240px;
-      padding: 15px;
-      background: #1a1a1a;
-      border-top: 1px solid #333;
-      font-size: 14px;
+    }
+    select, input, button {
+      background-color: #2c2c2c;
+      color: #fff;
+      border: 1px solid #666;
+      padding: 5px;
+      margin: 4px 0;
+    }
+    #totais {
+      margin-top: 20px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+    .input-group {
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <h3>📁 Navegação</h3>
-    <ul>
-      <li><a href="index.html">🔧 Registro de Desmanche</a></li>
-      <li><a href="registro2.html">📄 Segunda Página</a></li>
-    </ul>
+  <h1>📦 Los Malditos - Controle de Produtos</h1>
+
+  <div class="input-group">
+    <label>🧾 Nº do Pedido:</label><br>
+    <input type="text" id="numero-pedido" placeholder="Ex: #0456">
   </div>
 
-  <!-- Conteúdo principal -->
-  <header>
-    <div class="logo">
-      <img src="./Oculto Produtos_files/logo.png" alt="Logo Grupo Oculto">
-      <h1>Grupo Oculto</h1>
-      <p>Bem vindo (a) ao Grupo Oculto!</p>
-    </div>
-  </header>
+  <div class="input-group">
+    <label>👤 Vendedor:</label><br>
+    <input type="text" id="vendedor" placeholder="Nome do Vendedor">
+  </div>
 
-  <main>
-    <div class="tabela-container">
-      <!-- Aqui permanece a mesma tabela original com os produtos -->
-      <!-- Reutilize exatamente o <table> e <script> como está no código original -->
-      <!-- ... tabela completa omitida aqui por brevidade ... -->
-    </div>
+  <div class="input-group">
+    <label>🧍 Comprador:</label><br>
+    <input type="text" id="comprador" placeholder="Nome do Comprador">
+  </div>
 
-    <div class="dados-retorno">
-      <div class="dados-head">
-        <select id="mode-selector">
-          <option value="">Selecione o retorno...</option>
-          <option value="limpo">Limpo</option>
-          <option value="sujo">Sujo</option>
-          <option value="limpo-parc">Limpo Parceiro</option>
-          <option value="sujo-parc">Sujo Parceiro</option>
-        </select>
-      </div>
-      <div class="dados-body">
-        <h3>Total dos Produtos</h3>
-        <div id="totais">
-          <p>Sujo Parceiro: <span>R$&nbsp;432.601,00</span></p>
-          <p>Comissão: R$&nbsp;33.250,00</p>
-        </div>
-      </div>
-    </div>
-  </main>
+  <div class="input-group">
+    <label>🎁 Brinde:</label><br>
+    <input type="text" id="brinde" placeholder="Ex: 1x Celular">
+  </div>
 
-  <footer>
-    <p>🐺 Wolf | Discord: pocabdf</p>
-  </footer>
+  <label for="mode-selector">💰 Modo de Venda:</label>
+  <select id="mode-selector">
+    <option value="">-- Selecione --</option>
+    <option value="limpo">💸 Limpo</option>
+    <option value="sujo">🧼 Sujo</option>
+    <option value="limpo-parc">🤝 Limpo Parceiro</option>
+    <option value="sujo-parc">🧽 Sujo Parceiro</option>
+  </select>
 
-  <script src="./Oculto Produtos_files/script.js.download"></script>
+  <table>
+    <thead>
+      <tr>
+        <th>Produto</th>
+        <th>Limpo</th>
+        <th>Sujo</th>
+        <th>Limpo Parceiro</th>
+        <th>Sujo Parceiro</th>
+        <th>Quantidade</th>
+      </tr>
+    </thead>
+    <tbody id="produtos"></tbody>
+  </table>
 
+  <div id="totais">Selecione um modo de cálculo</div>
+  <br>
+  <button onclick="enviarResumoManual()">📤 Enviar para o Discord</button>
+
+  <script>
+    const produtos = [
+      { nome: "Cartão Raro", limpo: 15000, sujo: 12000, limpoParc: 11250, sujoParc: 9000 },
+      { nome: "Cartão in-Commum", limpo: 20000, sujo: 16000, limpoParc: 15000, sujoParc: 12000 },
+      { nome: "Cartão Comum", limpo: 30000, sujo: 25000, limpoParc: 22500, sujoParc: 18750 },
+      { nome: "Cartão Normal", limpo: 45000, sujo: 37500, limpoParc: 41250, sujoParc: 33750 },
+      { nome: "Cartão Lendário", limpo: 100000, sujo: 80000, limpoParc: 75000, sujoParc: 60000 },
+      { nome: "Pendrive", limpo: 9000, sujo: 6000, limpoParc: 7500, sujoParc: 6000 },
+      { nome: "Alicate", limpo: 4000, sujo: 3000, limpoParc: 3750, sujoParc: 3000 },
+      { nome: "Celular", limpo: 50000, sujo: 40000, limpoParc: 37500, sujoParc: 30000 },
+      { nome: "Bloqueador", limpo: 7000, sujo: 6000, limpoParc: 5250, sujoParc: 4500 },
+      { nome: "Notebook", limpo: 9000, sujo: 8000, limpoParc: 7500, sujoParc: 6000 },
+      { nome: "Ticket", limpo: 2000, sujo: 1500, limpoParc: 1000, sujoParc: 750 },
+      { nome: "Lockpick Alumínio", limpo: 3000, sujo: 2500, limpoParc: 2000, sujoParc: 1500 },
+      { nome: "Lockpick Cobre", limpo: 4000, sujo: 3000, limpoParc: 2500, sujoParc: 2000 },
+      { nome: "note", limpo: 15000, sujo: 12000, limpoParc: 11250, sujoParc: 9000 },
+      { nome: "not", limpo: 20000, sujo: 16000, limpoParc: 18000, sujoParc: 15000 },
+      { nome: "chip", limpo: 5000, sujo: 4000, limpoParc: 4500, sujoParc: 4000 },
+      { nome: "Chip", limpo: 3000, sujo: 2500, limpoParc: 2000, sujoParc: 1500 }
+    ];
+
+    const quantidades = new Array(produtos.length).fill(0);
+    const seletorModo = document.getElementById("mode-selector");
+    const divTotais = document.getElementById("totais");
+    const tabelaProdutos = document.getElementById("produtos");
+    const webhookURL = "https://discord.com/api/webhooks/1400936108434391132/moZC9CNnNzNQlRfK9pjq8iIIucC7q3f-B0u4-VU40Z6GsW1F90PnYskV6BSvu-rDv03D";
+
+    produtos.forEach((produto, index) => {
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td>${produto.nome}</td>
+        <td>R$ ${produto.limpo}</td>
+        <td>R$ ${produto.sujo}</td>
+        <td>R$ ${produto.limpoParc}</td>
+        <td>R$ ${produto.sujoParc}</td>
+        <td><input type="number" min="0" value="0" onchange="atualizaValor(${index}, this.value)"></td>
+      `;
+      tabelaProdutos.appendChild(tr);
+    });
+
+    function atualizaValor(index, quantidade) {
+      quantidades[index] = parseInt(quantidade) || 0;
+      atualizarTotais();
+    }
+
+    function atualizarTotais() {
+      const modo = seletorModo.value;
+      let total = 0;
+
+      produtos.forEach((produto, i) => {
+        const qtd = quantidades[i];
+        if (qtd > 0) {
+          let valorUnit = 0;
+          if (modo === "limpo") valorUnit = produto.limpo;
+          else if (modo === "sujo") valorUnit = produto.sujo;
+          else if (modo === "limpo-parc") valorUnit = produto.limpoParc;
+          else if (modo === "sujo-parc") valorUnit = produto.sujoParc;
+
+          total += valorUnit * qtd;
+        }
+      });
+
+      const comissao = total * 0.10;
+      const totalFinal = total;
+
+divTotais.innerHTML = modo
+  ? `<div>💵 <strong>Valor Total:</strong> R$ ${totalFinal.toLocaleString('pt-BR', { minimumFractionDigits: 2 })}</div>
+     <div>💸 <strong>Comissão (10%):</strong> R$ ${comissao.toLocaleString('pt-BR', { minimumFractionDigits: 2 })}</div>`
+  : "Selecione um modo de cálculo"; 
+    }
+
+    function enviarResumoManual() {
+      const modo = seletorModo.value;
+      const pedido = document.getElementById("numero-pedido").value || "N/D";
+      const vendedor = document.getElementById("vendedor").value || "N/D";
+      const comprador = document.getElementById("comprador").value || "N/D";
+      const brinde = document.getElementById("brinde").value || "#N/A";
+
+      if (!modo) {
+        alert("Selecione um modo de venda.");
+        return;
+      }
+
+      let total = 0;
+      let listaItens = [];
+
+      produtos.forEach((produto, i) => {
+        const qtd = quantidades[i];
+        if (qtd > 0) {
+          let valorUnit = 0;
+          if (modo === "limpo") valorUnit = produto.limpo;
+          else if (modo === "sujo") valorUnit = produto.sujo;
+          else if (modo === "limpo-parc") valorUnit = produto.limpoParc;
+          else if (modo === "sujo-parc") valorUnit = produto.sujoParc;
+
+          const subtotal = valorUnit * qtd;
+          total += subtotal;
+          listaItens.push(`${qtd}x ${produto.nome}`);
+        }
+      });
+
+      if (listaItens.length === 0) {
+        alert("Adicione pelo menos um item ao pedido.");
+        return;
+      }
+
+      const totalFinal = total;
+      const comissao = total * 0.10;
+
+      const mensagem = `📄 **Nova Nota!**\n\n` +
+        `🧾 **Pedido Nº**: ${pedido}\n` +
+        `👨‍💼 **Vendedor**: ${vendedor}\n` +
+        `🧑‍💼 **Comprador**: ${comprador}\n` +
+        `📦 **Itens**: ${listaItens.join(', ')}\n` +
+        `🎁 **Brinde**: ${brinde}\n` +
+        `💵 **Valor**: R$ ${totalFinal.toLocaleString('pt-BR', { minimumFractionDigits: 2 })}\n` +
+        `💸 **Comissão do Vendedor (10%)**: R$ ${comissao.toLocaleString('pt-BR', { minimumFractionDigits: 2 })}`;
+
+      fetch(webhookURL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ content: mensagem })
+      }).then(() => {
+        alert("✅ Pedido enviado com sucesso!");
+      }).catch(error => {
+        console.error("Erro ao enviar para o Discord:", error);
+        alert("❌ Erro ao enviar o pedido.");
+      });
+    }
+
+    seletorModo.addEventListener("change", atualizarTotais);
+  </script>
 </body>
 </html>
