--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <h3>📁 Navegação</h3>
     <ul>
       <li><a href="index.html">🔧 Registro de Desmanche</a></li>
-      <li><a href="registro2.html">📄 Segunda Página</a></li>
+      <li><a href="registro2.html">📄 Calculadora</a></li>
     </ul>
   </div>
 
