--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@
 
   <script>
     let imageFile = null;
-    const webhookURL = 'https://discord.com/api/webhooks/1400936108434391132/moZC9CNnNzNQlRfK9pjq8iIIucC7q3f-B0u4-VU40Z6GsW1F90PnYskV6BSvu-rDv03D';
 
     const pasteBox = document.getElementById('pasteBox');
     const status = document.getElementById('status');
@@ -208,5 +207,8 @@
       }
     }
   </script>
+  <script src="config.js"></script>
+  <script src="script.js"></script>
+  <script src="controle.js"></script>
 </body>
 </html>
