--- a/registro2.html
+++ b/registro2.html
@@ -155,6 +155,8 @@
   </style>
 </head>
 <body>
+  <script src="config.js"></script>
+  <script src="script.js"></script>
 
   <div class="sidebar">
     <h3>📁 Navegação</h3>
@@ -221,6 +223,8 @@
 
   <div id="totais">Selecione um modo de cálculo</div>
 
-  <script src="controle.js"></script>
+<script src="config.js"></script>
+<script src="script.js"></script>
+<script src="controle.js"></script>
 </body>
 </html>
