--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <script src="config.js"></script>
   <title>Registro de Desmanche - Los Malditos</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap');
@@ -206,9 +207,6 @@
         status.textContent = "⚠️ Erro: " + error.message;
       }
     }
-  </script>
-  <script src="config.js"></script>
-  <script src="script.js"></script>
-  <script src="controle.js"></script>
+  </script>>
 </body>
 </html>
