--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <script src="config.js"></script>
+  <script src="desmanche.js"></script>
   <title>Registro de Desmanche - Los Malditos</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap');
