--- a/registro2.html
+++ b/registro2.html
@@ -211,10 +211,10 @@
     <thead>
       <tr>
         <th>Produto</th>
-        <th>Limpo</th>
-        <th>Sujo</th>
-        <th>Limpo Parceiro</th>
-        <th>Sujo Parceiro</th>
+        <th class="preco preco-limpo">Limpo</th>
+        <th class="preco preco-sujo">Sujo</th>
+        <th class="preco preco-limpoparceiro">Limpo Parceiro</th>
+        <th class="preco preco-sujoparceiro">Sujo Parceiro</th>
         <th>Quantidade</th>
       </tr>
     </thead>
