--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <script src="desmanche.js"></script>
+  <script src="config.js"></script>
+  <script src="controle.js"></script>
   <title>Registro de Desmanche - Los Malditos</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap');
