--- a/registro2.html
+++ b/registro2.html
@@ -1,35 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <script src="config.js"></script>
-  <script src="controle.js"></script>
   <meta charset="UTF-8">
-  <title>Los Malditos - Controle de Produtos</title>
+  <title>Registro de Desmanche - Los Malditos</title>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Orbitron', sans-serif;
       background-color: #1c1c1c;
-      color: #eaeaea;
-      padding: 20px;
+      color: #e0e0e0;
+      padding: 0;
       margin: 0;
     }
 
-    h1 {
-      text-align: center;
-      font-size: 28px;
+    /* Sidebar */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 220px;
+      height: 100%;
+      background-color: #2b2b2b;
+      border-right: 2px solid #444;
+      padding: 30px 20px;
+      box-sizing: border-box;
+    }
+
+    .sidebar h3 {
+      font-family: 'Anton', sans-serif;
+      font-size: 18px;
+      color: #f1f1f1;
       margin-bottom: 20px;
     }
 
-    .comander {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      justify-content: center;
-      align-items: center;
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .sidebar li {
+      margin-bottom: 15px;
+    }
+
+    .sidebar a {
+      color: #ccc;
+      text-decoration: none;
+      font-size: 14px;
+      transition: color 0.3s ease;
+    }
+
+    .sidebar a:hover {
+      color: #fff;
+    }
+
+    /* Conteúdo principal */
+    .container {
+      background: #2b2b2b;
+      padding: 30px;
+      border-radius: 15px;
+      max-width: 1000px;
+      margin: 40px auto 40px 660px; /* compensação da sidebar */
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+      border: 2px solid #444;
+    }
+
+    h1 {
+      font-family: 'Anton', sans-serif;
+      color: #f1f1f1;
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 28px;
     }
 
     .linha-campos {
@@ -37,23 +77,13 @@
       flex-wrap: wrap;
       gap: 20px;
       justify-content: center;
+      margin-bottom: 20px;
     }
 
     .campo {
       display: flex;
       flex-direction: column;
       min-width: 200px;
-    }
-
-    .input-group {
-      display: grid;
-      gap: 5px;
-      min-width: 200px;
-    }
-
-    label {
-      font-weight: bold;
-      margin-top: 10px;
     }
 
     input, select {
@@ -72,19 +102,32 @@
     }
 
     button {
-      background-color: #3a3a3a;
-      color: #fff;
-      border: 1px solid #666;
+      background-color: #8a1f1f;
+      color: white;
+      border: none;
       padding: 10px 20px;
       border-radius: 6px;
       margin: 10px 5px;
       cursor: pointer;
-      transition: background-color 0.3s, transform 0.2s;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
-      background-color: #4caf50;
-      transform: scale(1.05);
+      background-color: #a82626;
+    }
+
+    .controle-venda {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      gap: 20px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+    }
+
+    .centralizado {
+      text-align: center;
     }
 
     table {
@@ -123,55 +166,38 @@
       text-align: center;
     }
 
-    .controle-venda {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      gap: 20px;
-      margin-top: 20px;
-      flex-wrap: wrap;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .centralizado {
-      text-align: center;
-    }
-
     @media (max-width: 768px) {
       .linha-campos {
         flex-direction: column;
         align-items: center;
       }
 
-      table, th, td {
-        font-size: 14px;
-      }
-
       .controle-venda {
         flex-direction: column;
         align-items: center;
+      }
+
+      .container {
+        margin-left: 230px;
       }
     }
   </style>
 </head>
 <body>
-  <script src="config.js"></script>
-  <script src="script.js"></script>
 
+  <!-- Sidebar -->
   <div class="sidebar">
     <h3>📁 Navegação</h3>
     <ul>
       <li><a href="index.html">🔧 Registro de Desmanche</a></li>
-      <li><a href="registro2.html">📄 Calculadora
-      </a></li>
+      <li><a href="registro2.html">📄 Calculadora</a></li>
     </ul>
   </div>
 
-  <h1>📦 Los Malditos - Controle de Produtos</h1>
+  <!-- Conteúdo -->
+  <div class="container">
+    <h1>📦 Los Malditos - Controle de Produtos</h1>
 
-  <div class="comander">
     <div class="linha-campos">
       <div class="campo">
         <label>🧾 Nº do Pedido:</label>
@@ -207,22 +233,26 @@
 
       <button onclick="enviarResumoManual()" id="botao-enviar">📤 Enviar para o Discord</button>
     </div>
+
+    <!-- Tabela de Produtos -->
+    <table>
+      <thead>
+        <tr>
+          <th>Produto</th>
+          <th class="col-limpo">Limpo</th>
+          <th class="col-sujo">Sujo</th>
+          <th class="col-limpo-parceiro">Limpo Parceiro</th>
+          <th class="col-sujo-parceiro">Sujo Parceiro</th>
+          <th>Quantidade</th>
+        </tr>
+      </thead>
+      <tbody id="produtos"></tbody>
+    </table>
+
+    <div id="totais">Selecione um modo de cálculo</div>
   </div>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Produto</th>
-        <th class="preco preco-limpo">Limpo</th>
-        <th class="preco preco-sujo">Sujo</th>
-        <th class="preco preco-limpoparceiro">Limpo Parceiro</th>
-        <th class="preco preco-sujoparceiro">Sujo Parceiro</th>
-        <th>Quantidade</th>
-      </tr>
-    </thead>
-    <tbody id="produtos"></tbody>
-  </table>
-
-  <div id="totais">Selecione um modo de cálculo</div>
+  <script src="config.js"></script>
+  <script src="controle.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
