--- a/registro2.html
+++ b/registro2.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <script src="desmanche.js"></script>
+  <script src="config.js"></script>
   <title>Registro de Desmanche - Los Malditos</title>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
