--- a/Calculadora/registro2.html
+++ b/Calculadora/registro2.html
@@ -197,6 +197,7 @@
   <!-- Conteúdo -->
   <div class="container">
     <h1>📦 Los Malditos - Controle de Produtos</h1>
+     <script src="config.js"></script>
      <script src="controle.js"></script>
 
     <div class="linha-campos">
