--- a/Index/index.html
+++ b/Index/index.html
@@ -130,8 +130,8 @@
   <div class="sidebar">
     <h3>📁 Navegação</h3>
     <ul>
-      <li><a href="index.html">🔧 Registro de Desmanche</a></li>
-      <li><a href="registro2.html">📄 Calculadora</a></li>
+      <li><a href="/Index/index.html">🔧 Registro de Desmanche</a></li>
+      <li><a href="/Calculadora/registro2.html">📄 Calculadora</a></li>
     </ul>
   </div>
 
