--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <script src="desmanche.js"></script>
+  <script src="Desmanche/desmanche.js"></script>
   <title>Registro de Desmanche - Los Malditos</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap');
@@ -130,8 +130,8 @@
   <div class="sidebar">
     <h3>📁 Navegação</h3>
     <ul>
-      <li><a href="/Index/index.html">🔧 Registro de Desmanche</a></li>
-      <li><a href="/Calculadora/registro2.html">📄 Calculadora</a></li>
+      <li><a href="index.html">🔧 Registro de Desmanche</a></li>
+      <li><a href="registro2.html">📄 Calculadora</a></li>
     </ul>
   </div>
 
