--- a/registro2.html
+++ b/registro2.html
@@ -189,16 +189,16 @@
   <div class="sidebar">
     <h3>📁 Navegação</h3>
     <ul>
-      <li><a href="/Index/index.html">🔧 Registro de Desmanche</a></li>
-      <li><a href="/Calculadora/registro2.html">📄 Calculadora</a></li>
+      <li><a href="index.html">🔧 Registro de Desmanche</a></li>
+      <li><a href="registro2.html">📄 Calculadora</a></li>
     </ul>
   </div>
 
   <!-- Conteúdo -->
   <div class="container">
     <h1>📦 Los Malditos - Controle de Produtos</h1>
-     <script src="config.js"></script>
-     <script src="controle.js"></script>
+     <script src="Calculadora/config.js"></script>
+     <script src="Calculadora/controle.js"></script>
 
     <div class="linha-campos">
       <div class="campo">
