--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <script src="desmanche.js"></script>
 <head>
   <meta charset="UTF-8">
-  <script src="Desmanche/desmanche.js"></script>
   <title>Registro de Desmanche - Los Malditos</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@500&display=swap');
