--- a/registro2.html
+++ b/registro2.html
@@ -193,13 +193,11 @@
       <li><a href="registro2.html">📄 Calculadora</a></li>
     </ul>
   </div>
-
+    <script src="config.js"></script>
+    <script src="controle.js"></script>
   <!-- Conteúdo -->
   <div class="container">
     <h1>📦 Los Malditos - Controle de Produtos</h1>
-     <script src="Calculadora/config.js"></script>
-     <script src="Calculadora/controle.js"></script>
-
     <div class="linha-campos">
       <div class="campo">
         <label>🧾 Nº do Pedido:</label>
