--- a/registro2.html
+++ b/registro2.html
@@ -191,6 +191,8 @@
     <ul>
       <li><a href="index.html">🔧 Registro de Desmanche</a></li>
       <li><a href="registro2.html">📄 Calculadora</a></li>
+      <li><a href="registro-historico.html">🗃️ Hist. Desmanche</a></li>
+      <li><a href="historico-pedidos.html">📋 Hist. Pedidos</a></li>
     </ul>
   </div>
   <!-- Conteúdo -->
